<resources>
	<string name="app_name">Диагностика авто</string>
	<string name="main_title">Вас приветствует Ваш авто помощник</string>
	<string name="main_chouse_category">Выбрать тему</string>
	<string name="layout_category_title">Выбор темы</string>
	<string name="back">Назад</string>
	<string name="no">Нет</string>
	<string name="yes">Да</string>
	<string name="sms">Отправить СМС</string>
	<string name="layout_answer_title">Результат</string>
</resources>
