<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/Parent">


	<TextView
		style="@style/Text"
		android:layout_marginRight="16dp"
		android:layout_marginLeft="16dp"
		android:gravity="center"
		android:textSize="20dp"
		android:textColor="@color/app_main_text_color"
		tools:text="@string/main_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/answer"
		android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true"
		android:layout_above="@+id/sms"/>
	<com.gc.materialdesign.views.ButtonRectangle
		style="@style/Button"
		android:background="@color/button_background_color"
		android:textColor="@color/button_text_color"
		android:id="@+id/sms"
		android:text="@string/sms"
		android:layout_above="@+id/back"
		android:layout_marginTop="@dimen/parent_button_bottom_margin"
		android:layout_centerHorizontal="true"/>
	<com.gc.materialdesign.views.ButtonRectangle
		style="@style/Button"
		android:background="@color/button_background_color"
		android:textColor="@color/button_text_color"
		android:id="@+id/back"
		android:text="@string/back"
		android:layout_alignParentBottom="true"
		android:layout_margin="@dimen/parent_button_bottom_margin"
		android:layout_centerHorizontal="true"/>
</RelativeLayout>