<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/Parent">


	<TextView
		style="@style/Text"
		android:layout_marginRight="16dp"
		android:layout_marginLeft="16dp"
		android:gravity="center"
		android:textColor="@color/app_main_text_color"
		tools:text="@string/main_title"
		android:layout_centerInParent="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/question"/>


	<LinearLayout
		android:layout_marginBottom="@dimen/parent_button_bottom_margin"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		style="@style/LL.H"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<com.gc.materialdesign.views.ButtonRectangle
			style="@style/Button.Small"
			android:background="@color/button_background_color"
			android:textColor="@color/button_text_color"
			android:id="@+id/yes"
			android:text="@string/yes"/>
		<View
			android:layout_width="40dp"
			android:layout_height="0dp"/>
		<com.gc.materialdesign.views.ButtonRectangle
			style="@style/Button.Small"
			android:background="@color/button_background_color"
			android:textColor="@color/button_text_color"
			android:id="@+id/no"
			android:text="@string/no"/>

	</LinearLayout>

</RelativeLayout>